# AutoSberCat

./: .env.local  .gitignore  README.md  cronrun.sh  pyproject.toml
app/: SberCatClient.py  celery.py  cli.py  config.py  i18n.py  middleware.py  models.py  server.py  users.py  utils.py
app/languages/: en.json  ru.json
scripts/: charge.sh  fetch.sh
