[tool.poetry]
name = "autosbercat"
version = "0.1.0"
description = ""
authors = ["georgii.imeshkenov <georgiiimeshkenov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
celery = "^5.2.7"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
python-environ = "^0.4.54"
aiohttp = "^3.8.3"
httpx = "^0.23.1"
fastapi-sessions = "^0.3.2"
aioredis = "^2.0.1"
requests = "^2.28.1"
redis = "^4.4.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
